kubernetes_related/backend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-movie-deployment
  namespace: rampup-backend-ns
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  replicas: 2
  selector:
    matchLabels:
      app: backend-movie-label
  template:
    metadata:
      labels:
        app: backend-movie-label
    spec:
      containers:
      - image: 419466290453.dkr.ecr.sa-east-1.amazonaws.com/rampup-backend:latest
        imagePullPolicy: Always
        name: backend-movie-container
        ports:
        - containerPort: 3000
          name: backend-port
---
apiVersion: v1
kind: Service
metadata:
    name: backend-svc
    namespace: rampup-backend-ns
spec:
    ports:
    - port: 3000
    selector:
        app: backend-movie-label
    type: ClusterIP
---
