kubernetes_related/frontend_deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rampup-frontend-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-movie-deployment
  namespace: rampup-frontend-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-movie-label
  template:
    metadata:
      labels:
        app: frontend-movie-label
    spec:
      containers:
      - image: 419466290453.dkr.ecr.sa-east-1.amazonaws.com/rampup-frontend:latest
        imagePullPolicy: Always
        name: frontend-movie-container
        ports:
        - containerPort: 3030
          name: frontend-port
---
apiVersion: v1
kind: Service
metadata:
    name: frontend-svc
    namespace: rampup-frontend-ns
spec:
    ports:
    - port: 3030
    selector:
        app: frontend-movie-label
    type: ClusterIP
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: frontend-ingress
  namespace: rampup-frontend-ns
spec:
  rules:
    - host: app.movie-ui.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-svc
              port:
                - number: 3030
